# punchpress

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  biome.jsonc  bunfig.toml  components.json  index.html  package.json  playwright.config.ts  playwright.desktop-performance.config.ts  playwright.performance.config.ts  tsconfig.json  vite.config.js
.github/workflows/: release-integrity.yml
apps/desktop/: .gitignore  electrobun.config.ts  electron-builder.yml  electron.vite.config.mjs  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/web/: components.json  index.html  package.json  tsconfig.json  vite.config.js
docs/: README.md  architecture-north-star.md  architecture.md  design-system.md  desktop-release.md  document-model.md  release-runbook.md
docs/architecture/: README.md  canvas-overlay-visual-system-plan.md  codebase-structure.md  document-model.md  editor-extraction-plan.md  editor-operating-model.md  vector-editing-operating-model.md
docs/architecture-decisions/: 0003-transform-interaction-model.md  README.md
docs/release/: runbook.md
docs/specs/: README.md  boolean-ops.md  canvas-navigation.md  canvas-overlays.md  clipboard.md  groups.md  history.md  nodes.md  performance-panel.md  shape-node.md  text-node.md  vector-node.md
docs/testing/: README.md  editor-contract.md  performance.md  playwright.md  strategy.md
server/: server.js
specs/: README.md  desktop-shell.md  nodes.md
src/: app.jsx  main.jsx  main.tsx  trpc.js
(+557 files in other folders)
